opam-version: "2.0"
authors: ["Krishna Agrawal"]
homepage: "https://github.com/krishnaag23/advent-of-fpga"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Advent of FPGA challenge submission"
description: "
Solving advent of Code in Hardcaml through cool hardware designs. 
"
